Make TCPSlaveBase::waitForResponse match its documentation and its KDE3 semantics: return true if connection got closed on us.

The change in behavior caused the http I/O slave to think that the other end was
not responding in any reasonable time (hard failure) while it was merely closing a persistent connection,
where we should retry.  Fixes frequent "timeout on server" errors when browsing
BUG:152964

svn path=/trunk/KDE/kdelibs/; revision=742809